Prevent top bar icons from overflowing on smaller screens
But they don't look great on small screens

--- a/app/sass/top_bar.sass
+++ b/app/sass/top_bar.sass
@@ -60,7 +60,7 @@ $dribbble: #ea4c89
 
     i
       display: inline-block
-      padding: 0 .5em
+      padding: 0 calc(5px + .75vw)
 
       color: $light-text-primary
       transition: color .2s ease
